--- a/styles/slider.css
+++ b/styles/slider.css
@@ -22,23 +22,20 @@
 	height: 100%;
 	box-sizing: border-box;
 	position: relative;
+	display: flex;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .slide {
-	top: 0;
-	left: 0;
-	opacity: 0;
+	flex: 0 0 100%;
 	width: 100%;
 	height: 100%;
-	position: absolute;
-	transition: opacity 1s;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-}
-
-.slide.active {
-	opacity: 1;
+	overflow: hidden;
+	position: relative;
 }
 
 .slide img {
@@ -172,40 +169,4 @@
 	to {
 		background-position: 0 0;
 	}
-}
-
-@keyframes swipeInRight {
-  0% { transform: translateX(100%); opacity: 1; }
-  100% { transform: translateX(0); opacity: 1; }
-}
-
-@keyframes swipeInLeft {
-  0% { transform: translateX(-100%); opacity: 1; }
-  100% { transform: translateX(0); opacity: 1; }
-}
-
-@keyframes swipeOutRight {
-  0% { transform: translateX(0); opacity: 1; }
-  100% { transform: translateX(-100%); opacity: 1; }
-}
-
-@keyframes swipeOutLeft {
-  0% { transform: translateX(0); opacity: 1; }
-  100% { transform: translateX(100%); opacity: 1; }
-}
-
-.swipeInRight {
-  animation: swipeInLeft 0.6s forwards;
-}
-
-.swipeInLeft {
-  animation: swipeInRight 0.6s forwards;
-}
-
-.swipeOutRight {
-  animation: swipeOutLeft 0.6s forwards;
-}
-
-.swipeOutLeft {
-  animation: swipeOutRight 0.6s forwards;
 }
